<resources>
    <string name="app_name">Warehouse Manager</string>
    <string name="register_now">No account yet? Sign Up now</string>
    <string name="logo_description">Logo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_email_or_username">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="login">You have an account already? Log in</string>
    <string name="action_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="existingWarehouse">Join an existing Warehouse</string>
    <string name="newWarehouse">Create a new Warehouse</string>
    <string name="or">or</string>
    <string name="changeAccount">Not you? Switch account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_warehouse">Warehouse</string>
    <string name="imports">Imports</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">641597852936560</string>
    <string name="fb_login_protocol_scheme">fb641597852936560</string>
    <string name="title_addProduct">Add</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_title_logout">Logout</string>
    <string name="pref_title_social">Social</string>
    <string name="pref_title_sync">Syncronisation</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_detail">Detail</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="title_warehouse_watch">Watch your Warehouse</string>
    <string name="manager_workers">Manage your employees</string>
    <string name="warehouse_preferences">Warehouse Preferences</string>
    <string name="shr_product_title">Manage</string>
    <string name="shr_product_description">Warehouse</string>
    <string name="warehouse_emplyoees">Employees</string>
    <string name="view">View</string>
    <string name="title_remove_product">Remove</string>
    <string name="title_product">Product</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="addComonents">Add Componets</string>

</resources>
